deployment/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
spec:
  selector:
    matchLabels:
      app: authentication
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: authentication
        tier: backend
    spec:
      containers:
        - name: authentication-service
          image: ghcr.io/stockhut/hsfl-master-ai-cloud-engineering/authentication:0.5.0
          imagePullPolicy: Always
          volumeMounts:
            # name must match the volume name below
            - name: secret-volume
              mountPath: /secret-volume
              readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: jwt-private-key
