deployment/web-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: hello
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        tier: frontend
        track: stable
    spec:
      containers:
        - name: web-service
          image: ghcr.io/stockhut/hsfl-master-ai-cloud-engineering/web-service:0.4.1
          #lifecycle:
            #preStop:
              #exec:
                #command: ["/usr/sbin/nginx","-s","quit"]
