deployment/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication
spec:
  selector:
    app: authentication
    tier: backend
  ports:
  - name: auth-http
    protocol: "TCP"
    port: 8080
    targetPort: 8080
  - name: auth-grpc
    protocol: "TCP"
    port: 3001
    targetPort: 3001
  type: LoadBalancer
