deployment/recipe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe
spec:
  selector:
    app: hello
    tier: recipe
  ports:
  - protocol: "TCP"
    port: 8081
    targetPort: 3000
  type: LoadBalancer
